# SuperStarTrail

./: DMG_README.txt  PACKAGING.md  PACKAGING_GUIDE.md  QUICKSTART.md  STATUS.md  SuperStarTrail-Windows.spec  SuperStarTrail.spec  USAGE_GUIDE.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: build-release.yml
docs/superpowers/plans/: 2026-04-02-sky-mask-dual-stack.md
src/: __init__.py  cli.py
src/core/: cancellation.py  exporter.py  gap_filler.py  mask_processor.py  raw_processor.py  satellite_filter.py  stacking_engine.py  timelapse_generator.py
src/i18n/: translations.py
src/ui/: dialogs.py  main_window.py
src/ui/panels/: file_list_panel.py  parameters_panel.py  preview_panel.py
src/utils/: file_naming.py  settings.py
tests/: test_exporter.py  test_file_list_panel.py  test_file_naming.py  test_mask_processor.py  test_parameters_panel.py  test_raw_processor_unit.py  test_settings.py  test_stacking_engine.py  test_timelapse_generator.py
tools/: run_gap_filling.py  run_raw_reading.py  run_stacking.py  run_stretch.py  run_timelapse.py
